weight and mean now work, even with missing values

--- a/views/pages/calculator.ejs
+++ b/views/pages/calculator.ejs
@@ -120,11 +120,11 @@
                 </tr>
 
             </table>
-            <b style="color: darkred; margin-top:10px;">
+            <b style="color: darkred; margin-top:10px; margin-bottom:15px;">
                 Result
             </b>
-			<div id= "result">
-			Result here
+			<div id= "result" style="margin-top:10px; padding-left:10px;">
+			
 			</div>
             <br>
             <div class="buttons">
