percentage view works

--- a/views/pages/calculator.ejs
+++ b/views/pages/calculator.ejs
@@ -37,17 +37,15 @@
                     </th>
                     <th>
                         <input type="text"
-							   name = "A1num"
-                               id="GradeA1num"
+							   name = "grades"
                                value = "" />
                         /
                         <br />
                         <input type="text"
-							   name = "A1den"
-                               id= "GradeA1den"
+							   name = "grades"
                                value = "" />
                     </th>
-                    <th id="percent"> 1 </th>
+                    <th id="percent1"> </th>
                 </tr>
                 <tr>
                     <th>Activity 2</th>
@@ -60,17 +58,17 @@
                     </th>
                     <th>
                         <input type="text"
-							   name = "A2num"
-                               id=" GradeA2num"
+							   name = "grades"
+                               
                                value = "" />
                         /
                         <br />
                         <input type="text"
-							   name = "A2den"
-                               id= "GradeA2den"
+							   name = "grades"
+                               
                                value = "" />
                     </th>
-                    <th style="padding: 70px">      </th>
+                    <th id="percent2" style="padding: 70px">      </th>
                 </tr>
                 <tr>
                     <th>Activity 3</th>
@@ -83,17 +81,17 @@
                     </th>
                     <th>
                         <input type="text"
-							   name = "A3num"
-                               id= "GradeA3num"
+							   name = "grades"
+                               
                                value = "" />
                         /
                         <br />
                         <input type="text"
-							   name = "A3den"
-                               id= "GradeA3den"
+							   name = "grades"
+                              
                                value = "" />
                     </th>
-                    <th></th>
+                    <th id="percent3"></th>
                 </tr>
                 <tr>
                     <th>Activity 4 </th>
@@ -106,17 +104,15 @@
                     </th>
                     <th>
                         <input type="text"
-							   name = "A4num"
-                               id= "GradeA4num"
+							   name = "grades"
                                value = "" />
                         /
                         <br />
                         <input type="text"
-							   name = "A4den"
-                               id= "Grade4den"
+							   name = "grades"
                                value = "" />
                     </th>
-                    <th></th>
+                    <th id="percent4"></th>
                 </tr>
 
             </table>
