--- a/views/pages/calculator.ejs
+++ b/views/pages/calculator.ejs
@@ -68,7 +68,7 @@
                                
                                value = "" />
                     </th>
-                    <th id="percent2" style="padding: 70px">      </th>
+                    <th id="percent2">      </th>
                 </tr>
                 <tr>
                     <th>Activity 3</th>
@@ -133,6 +133,12 @@
             </div>
 
         </form>
+
+		<div>
+		<button type= "button" class="picbutton" id="picbutton"> How well was my result? </button>
+		<br>
+		<img id = "resimage" src="public/images/yay" alt="Picture showing how good your grades are">
+		</div>
     </div>
     <div style="padding: 10px;padding-bottom: 20px;background-color:black">
 
