backspacing into empty fields causes percentage to disappear

--- a/views/pages/calculator.ejs
+++ b/views/pages/calculator.ejs
@@ -133,12 +133,15 @@
             </div>
 
         </form>
-
 		<div>
-		<button type= "button" class="picbutton" id="picbutton"> How well was my result? </button>
-		<br>
-		<img id = "resimage" src="public/images/yay" alt="Picture showing how good your grades are">
-		</div>
+            <button type="button" class="picbutton" id="picbutton"> How well was my result? </button>
+            <br>
+            <img style = "margin-left:30%;" id="resimage" src="images/yay.png" alt="Picture showing how good your grades are">
+        </div>
+		<div>
+            <button type="button" class="picbutton" id="weather"> Click here to change the weather </button>
+            <br>
+        </div>
     </div>
     <div style="padding: 10px;padding-bottom: 20px;background-color:black">
 
