--- a/views/pages/calculator.ejs
+++ b/views/pages/calculator.ejs
@@ -21,7 +21,7 @@
             <table>
                 <tr style="background-color: lightgrey">
                     <th>Name</th>
-                    <th style="width:70px;">Short Name</th>
+                    <th>Short Name</th>
                     <th>Weight</th>
                     <th>Grade</th>
                     <th>Percent</th>
@@ -136,10 +136,15 @@
 		<div>
             <button type="button" class="picbutton" id="picbutton"> How well was my result? </button>
             <br>
-            <img style = "margin-left:30%;" id="resimage" src="images/yay.png" alt="Picture showing how good your grades are">
+            <img style = "margin-left:30%;" id="resimage" src="images/yay.png" alt="Your reaction when seeing these grades">
         </div>
 		<div>
-            <button type="button" class="picbutton" id="weather"> Click here to change the weather </button>
+            <p id="currdate"> </p>
+			<form id="form2">
+				<p> Enter your exam date below:</p>
+				<input type = "date" id = "examdate" name="examdate" >
+			</form>
+			<p style = "padding-left:10%;" id="timeleft"> </p>
             <br>
         </div>
     </div>
