--- a/views/pages/calculator.ejs
+++ b/views/pages/calculator.ejs
@@ -134,7 +134,7 @@
 
         </form>
 		<div>
-            <button type="button" class="picbutton" id="picbutton"> How well was my result? </button>
+            <button type="button" class="picbutton" id="picbutton"> How was my result? </button>
             <br>
             <img style = "margin-left:30%;" id="resimage" src="images/yay.png" alt="Your reaction when seeing these grades">
         </div>
